--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Personal Website | Fabian Nunez</title>
 </head>
 <body>
-    <div class="home">
+    <div class="home bg-dark">
         <section class="welcome-section">
             <h1>Welcome to my website</h1>
         </section>
