--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="social-links flex">
                 <a href="https://github.com/seakr1948" target="_blank" class="fa fa-github"></a>
-                <a href="linkedin.com/in/fabian-nunez-28210818a" target="_blank" class="fa fa-linkedin"></a>
+                <a href="https://www.linkedin.com/in/fabian-nunez-28210818a/" target="_blank" class="fa fa-linkedin"></a>
                 <a href = "mailto: fabiannunez914@gmail.com" class="fa fa-envelope"></a>
                 <a href="tel:+17149024902" class="fa fa-phone"></a>
             </div>
