Added some animations to the contact icons.

--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
         </section>
         <section class="contacts flex">
             <div>
-                <h2>My Socials...</h2>
+                <h2>Lets connect...</h2>
             </div>
             <div class="social-links flex">
                 <a href="https://github.com/seakr1948" target="_blank" class="fa fa-github"></a>
-                <a href="https://www.linkedin.com/in/fabian-nunez-28210818a/" target="_blank" class="fa fa-linkedin"></a>
+                <div id="linkedin-container"><a href="https://www.linkedin.com/in/fabian-nunez-28210818a/" target="_blank" class="fa fa-linkedin"></a></div>
+                
                 <a href = "mailto: fabiannunez914@gmail.com" class="fa fa-envelope"></a>
                 <a href="tel:+17149024902" class="fa fa-phone"></a>
             </div>
