Added the font-awesome icon library to add icons related to contacts and technologies

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <!-- <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css"> -->
     <link rel="stylesheet" href="/public/css/styles.css">
     <title>My Personal Website | Fabian Nunez</title>
 </head>
@@ -56,6 +57,15 @@
                 
             </div>
         </section>
+        <section class="tech-skills">
+            <div>Technologies that I'm familiar with</div>
+            <i class="fab fa-html5"></i>
+            <i class="fab fa-css3"></i>
+            <i class="fab fa-python"></i>
+            <i class="fab fa-js"></i>
+            <i class="fab fa-react"></i>
+            <i class="fab fa-node-js"></i>
+        </section>
         <section class="contacts flex">
             <div>
                 <h2>Lets connect...</h2>
@@ -72,4 +82,5 @@
         </section>
     </div>
 </body>
+<script src="https://kit.fontawesome.com/f3f602380b.js" crossorigin="anonymous"></script>
 </html>
