Animations are done for the page. Need to add more content about myself.

--- a/index.html
+++ b/index.html
@@ -103,4 +103,5 @@
     </div>
 </body>
 <script src="https://kit.fontawesome.com/f3f602380b.js" crossorigin="anonymous"></script>
+<script src="/js/index.js"></script>
 </html>
